--- a/src/core/Makefile_core_common
+++ b/src/core/Makefile_core_common
@@ -25,7 +25,7 @@ SUB_DIRS=\
 
 
 # このバイナリが依存しているライブラリ
-DEP_LIBS=BOOST ZLIB WX LIBOGG LIBVORBIS OPENAL COMMON
+DEP_LIBS=BOOST BOOST_THREAD ZLIB WX LIBOGG LIBVORBIS OPENAL COMMON
 
 # 追加の CFLAGS
 CXXFLAGS += -DBOOST_ENABLE_ASSERT_HANDLER
