--- a/src/core/base/utils/Makefile
+++ b/src/core/base/utils/Makefile
@@ -13,7 +13,8 @@ include $(CORE_DIR)/Makefile_core_subsys_pre
 #-----------------------------------------
 CPPFILES = \
 	fftsg.cpp     \
-	Singleton.cpp
+	Singleton.cpp \
+	Thread.cpp
 
 #-----------------------------------------
 # ここのセクションは通常変更する必要なし
