--- a/src/core/base/event/Makefile
+++ b/src/core/base/event/Makefile
@@ -13,7 +13,8 @@ include $(CORE_DIR)/Makefile_core_subsys_pre
 #-----------------------------------------
 CPPFILES=\
 	Event.cpp                      \
-	TickCount.cpp
+	TickCount.cpp                  \
+	Timer.cpp
 
 #-----------------------------------------
 # ここのセクションは通常変更する必要なし
