タイマーのRisseバインディング(global.Timerクラス) を追加
イベントシステム内で Risse オブジェクトを管理するのを辞めた (イベントシステムはスレッドセーフだがRisseオブジェクトはスレッドセーフである保証がないため)

--- a/src/core/base/event/Makefile
+++ b/src/core/base/event/Makefile
@@ -14,7 +14,8 @@ include $(CORE_DIR)/Makefile_core_subsys_pre
 CPPFILES=\
 	Event.cpp                      \
 	TickCount.cpp                  \
-	Timer.cpp
+	Timer.cpp                      \
+	TimerBind.cpp
 
 #-----------------------------------------
 # ここのセクションは通常変更する必要なし
