ハンドルされなかった例外をハンドルするための機構を追加
スクリプトエディタで例外が発生した場合はその場所を示すスクリプトエディタを別に開くように (同じウィンドウ内で指摘できればそうした方がよい？？)

そのほか細かい修正

--- a/src/core/Makefile_core_common
+++ b/src/core/Makefile_core_common
@@ -11,6 +11,7 @@ SUBSYS_DIRS=\
 	$(CORE_DIR)/base/fs            \
 	$(CORE_DIR)/base/log           \
 	$(CORE_DIR)/base/script        \
+	$(CORE_DIR)/base/system        \
 	$(CORE_DIR)/base/ui            \
 	$(CORE_DIR)/base/utils         \
 	$(CORE_DIR)/sound              
