--- a/src/core/base/system/Makefile
+++ b/src/core/base/system/Makefile
@@ -12,8 +12,7 @@ include $(CORE_DIR)/Makefile_core_subsys_pre
 # このディレクトリにあるソースファイルを列挙
 #-----------------------------------------
 CPPFILES=\
-	RisaException.cpp              \
-	UnhandledException.cpp
+	SystemBind.cpp              
 
 #-----------------------------------------
 # ここのセクションは通常変更する必要なし
