Thread.cpp / Thread.h が wxWidgets の Thread.cpp と (デバッガ上で重なって) わかりづらかったので RisaThread.cpp / RisaThread.h に
イベント配信時にSEGVが発生していたのを修正

終了時、シングルトンの切断前にスクリプトエンジンをシャットダウンするように

tRisaThreadEvent で Wait 前に複数回 Post すると wxWidgets のエラーログに OS のエラーが記録されてしまっていたのを修正

そのほか、細かい修正

--- a/src/core/base/utils/Makefile
+++ b/src/core/base/utils/Makefile
@@ -12,9 +12,9 @@ include $(CORE_DIR)/Makefile_core_subsys_pre
 # このディレクトリにあるソースファイルを列挙
 #-----------------------------------------
 CPPFILES = \
-	fftsg.cpp     \
-	Singleton.cpp \
-	Thread.cpp
+	fftsg.cpp                  \
+	Singleton.cpp              \
+	RisaThread.cpp
 
 #-----------------------------------------
 # ここのセクションは通常変更する必要なし
