アイドル時とコンパクト時に送られるイベントを管理するモジュールを追加
コンパクトイベントは、長い周期で定期的に発生するイベント(標準で5秒おきに発生する)や、不要メモリを解放した方がよいタイミング(ウィンドウの非アクティブ化、アプリケーションの最小化)の際に発生するイベント。たいていはこのタイミングでガベージコレクションを実行する。

--- a/src/core/base/event/Makefile
+++ b/src/core/base/event/Makefile
@@ -13,6 +13,7 @@ include $(CORE_DIR)/Makefile_core_subsys_pre
 #-----------------------------------------
 CPPFILES=\
 	Event.cpp                      \
+	IdleEvent.cpp                  \
 	TickCount.cpp                  \
 	Timer.cpp                      \
 	TimerBind.cpp
