サウンドクラス (tRisaSound) を追加。Risa におけるサウンド操作を抽象化する。
そのRisseバインディング global.Sound を追加。

そのほかそれらに必要なデコーダファクトリやその管理部分などを追加

--- a/src/core/sound/Makefile
+++ b/src/core/sound/Makefile
@@ -12,11 +12,14 @@ include $(CORE_DIR)/Makefile_core_subsys_pre
 # このディレクトリにあるソースファイルを列挙
 #-----------------------------------------
 CPPFILES=\
-		WaveFormatConverter.cpp                    \
-		WaveLoopManager.cpp                        \
+		ALBuffer.cpp                               \
 		ALCommon.cpp                               \
 		ALSource.cpp                               \
-		ALBuffer.cpp                               \
+		Sound.cpp                                  \
+		SoundBind.cpp                              \
+		WaveDecoder.cpp                            \
+		WaveFormatConverter.cpp                    \
+		WaveLoopManager.cpp                        \
 		WaveSegmentQueue.cpp                       \
 		decoder/riffwave/RIFFWaveDecoder.cpp       \
 		decoder/vorbis/VorbisDecoder.cpp           \
