OpenAL win32 バイナリを 20060312cvs に。
OpenAL だけを再度ダウンロードして外部依存ライブラリを再構築したい場合は以下の通りにする
{{{
$ cd <<project top dir>>
$ cd external/openal
$ make clean
$ cd ..
$ make
}}}

--- a/external/openal/Makefile
+++ b/external/openal/Makefile
@@ -5,7 +5,7 @@ include $(TOP_DIR)/Makefile_platform
 include ../Makefile_common
 
 ifeq ($(PLATFORM),windows)
- DOWNLOAD_FILE=openal-bin-win32-1.1.tar.gz
+ DOWNLOAD_FILE=openal-bin-win32-20060312cvs.tar.bz2
 else
  DOWNLOAD_FILE="PLEASE UPDATE openal/Makefile to download your operating system's openal file!"
 endif
