--- a/Makefile_filenames
+++ b/Makefile_filenames
@@ -20,6 +20,7 @@ ZLIB_DIR=$(EXTERNAL_DIR)/zlib
 LIBOGG_DIR=$(EXTERNAL_DIR)/libogg
 LIBVORBIS_DIR=$(EXTERNAL_DIR)/libvorbis
 OPENAL_DIR=$(EXTERNAL_DIR)/openal
+GC_DIR=$(EXTERNAL_DIR)/gc
 
 
 ###### ビルド出力先
