文字列バッファ中に文字列バッファの「容量」を記録し、 容量を実際の文字列よりも多めにとることで += 演算子などでのメモリ再確保を減らし、効率を向上
そのほか細かい修正

--- a/src/core/risse/Makefile
+++ b/src/core/risse/Makefile
@@ -32,7 +32,7 @@ CPPFLAGS = $(CXXFLAGS)
 CPPFILES = 	src/risse.cpp                     \
 			src/risseCharUtils.cpp            \
 			src/risseConfig.cpp               \
-			src/risseString.cpp               
+			src/risseCxxString.cpp            
 
 OBJS = $(CPPFILES:.cpp=.o)
 
