LexerUtils の今まで書いた分のコンパイルが通るように。
risseException の基本機能を追加。

そのほか細かい修正。

--- a/src/core/risse/Makefile
+++ b/src/core/risse/Makefile
@@ -34,6 +34,7 @@ CPPFILES =  src/risseCharUtils.cpp            \
 			src/risseCxxObject.cpp            \
 			src/risseCxxOctet.cpp             \
 			src/risseCxxString.cpp            \
+			src/risseLexerUtils.cpp           \
 			src/risseUtils.cpp                \
 			src/risseVariant.cpp              
 
