AST の再帰用インターフェースを統一

--- a/src/core/risse/Makefile
+++ b/src/core/risse/Makefile
@@ -29,7 +29,8 @@ CPPFLAGS = $(CXXFLAGS)
 
 #----------------------------#
 
-CPPFILES =  src/risseCharUtils.cpp                   \
+CPPFILES =  src/risseAST.cpp                         \
+			src/risseCharUtils.cpp                   \
 			src/risseConfig.cpp                      \
 			src/risseCxxObject.cpp                   \
 			src/risseCxxOctet.cpp                    \
