実数を人間可読な形式に変換する際に Inf と NaN を変換できるように
ほとんどの演算子のASTを生成可能に

いくつかの定数因子を解析可能に

そのほか、細かい修正

--- a/src/core/risse/Makefile
+++ b/src/core/risse/Makefile
@@ -38,6 +38,7 @@ CPPFILES =  src/risseAST.cpp                         \
 			src/risseException.cpp                   \
 			src/risseLexerUtils.cpp                  \
 			src/risseScriptBlockBase.cpp             \
+			src/risseTypes.cpp                       \
 			src/risseUtils.cpp                       \
 			src/risseVariant.cpp                     \
 			src/risse_parser/risseLexer.cpp          \
