SSA 形式への変換の基礎的な部分と項の一部や簡単な単項演算子のSSA 形式への変換の実装と修正。
コンパイルは通るが動作確認はこれから。

--- a/src/core/risse/Makefile
+++ b/src/core/risse/Makefile
@@ -31,12 +31,14 @@ CPPFLAGS = $(CXXFLAGS)
 
 CPPFILES =  src/risseAST.cpp                         \
 			src/risseCharUtils.cpp                   \
+			src/risseCodeGen.cpp                     \
 			src/risseConfig.cpp                      \
 			src/risseCxxObject.cpp                   \
 			src/risseCxxOctet.cpp                    \
 			src/risseCxxString.cpp                   \
 			src/risseException.cpp                   \
 			src/risseLexerUtils.cpp                  \
+			src/risseOpCodes.cpp                     \
 			src/risseScriptBlockBase.cpp             \
 			src/risseTypes.cpp                       \
 			src/risseUtils.cpp                       \
