RisseVM 用コード生成とダンプの実装を行った
関数呼び出し用コードが未実装、バグ取りもおそらく不完全

try...catchやブロック付き呼び出し、関数内関数などは未実装

--- a/src/core/risse/Makefile
+++ b/src/core/risse/Makefile
@@ -31,6 +31,7 @@ CPPFLAGS = $(CXXFLAGS)
 
 CPPFILES =  src/risseAST.cpp                         \
 			src/risseCharUtils.cpp                   \
+			src/risseCodeBlock.cpp                   \
 			src/risseCodeGen.cpp                     \
 			src/risseConfig.cpp                      \
 			src/risseCxxObject.cpp                   \
