中間コードインタプリタの仮実装をいったんコミット

--- a/src/core/risse/Makefile
+++ b/src/core/risse/Makefile
@@ -32,6 +32,7 @@ CPPFLAGS = $(CXXFLAGS)
 CPPFILES =  src/risseAST.cpp                         \
 			src/risseCharUtils.cpp                   \
 			src/risseCodeBlock.cpp                   \
+			src/risseCodeExecutor.cpp                \
 			src/risseCodeGen.cpp                     \
 			src/risseConfig.cpp                      \
 			src/risseCxxObject.cpp                   \
