ブロック付きメソッド呼び出しができるように内部を整備。
メソッド関連の処理に関する部分を risseMethod.cpp / risseMethod.h として外だし。

--- a/src/core/risse/Makefile
+++ b/src/core/risse/Makefile
@@ -48,6 +48,7 @@ CPPFILES =  \
 			src/risseCodeBlock.cpp                   \
 			src/risseCodeExecutor.cpp                \
 			src/risseConfig.cpp                      \
+			src/risseMethod.cpp                      \
 			src/risseObject.cpp                      \
 			src/risseOctet.cpp                       \
 			src/risseString.cpp                      \
