--- a/src/core/risse/Makefile
+++ b/src/core/risse/Makefile
@@ -44,6 +44,7 @@ CPPFLAGS = $(CXXFLAGS)
 #----------------------------#
 
 CPPFILES =  \
+			src/risseAssert.cpp                      \
 			src/risseCharUtils.cpp                   \
 			src/risseCodeBlock.cpp                   \
 			src/risseCodeExecutor.cpp                \
