VMをstacklessに。実装途中だがreturn 1+2;のような簡単なサンプルが動作するようになったのでいったんコミット。
それにしてもstacklessは当然ながらメソッド呼び出しのオーバーヘッドが大きい。これをどう高速化していくか………。

--- a/src/core/risse/Makefile
+++ b/src/core/risse/Makefile
@@ -54,6 +54,7 @@ CPPFILES =  \
 			src/risseOctet.cpp                       \
 			src/risseString.cpp                      \
 			src/risseException.cpp                   \
+			src/risseExecutorContext.cpp             \
 			src/risseLexerUtils.cpp                  \
 			src/risseOpCodes.cpp                     \
 			src/risseScriptBlockBase.cpp             \
