Boehm GCをソースからコンパイルして使用するように。
Risse側でBoehm GCの動作にカスタマイズをくわえる必要が出たため、Boehm GCをスタティックリンクすることにする。

スレッドの扱いが多少面倒になるが、後で考えることにする。

--- a/external/gc/Makefile
+++ b/external/gc/Makefile
@@ -1,11 +1,4 @@
-TOP_DIR=../..
-include $(TOP_DIR)/Makefile_platform
-
+DOWNLOAD_FILE=gc6.8.tar.gz
 
 include ../Makefile_common
 
-ifeq ($(PLATFORM),windows)
- DOWNLOAD_FILE=boehm-gc-6.6-win32-mt-dll.tar.bz2
-else
- DOWNLOAD_FILE="PLEASE UPDATE openal/Makefile to download your operating system's Boehm GC file!"
-endif
