Linuxでは、実行時に使う共有ライブラリは、 .soではなくバージョン番号付き(.so.0等)のファイルだったので、 build_output/binにコピーする共有ライブラリの名前を修正。
（コピーをcopy_so_sub.shで行うようにした）

--- a/external/Makefile
+++ b/external/Makefile
@@ -39,9 +39,9 @@ download:
 # また、マルチスレッドヘルパーである mingwm*.dll も bin ディレ
 # クトリにコピーする
 ifeq ($(PLATFORM),windows)
- copy_dll: copy_dll_w32 do_copy_dll
+ copy_dll: copy_dll_w32
 else
- copy_dll: do_copy_dll
+ copy_dll: copy_dll_so
 endif
 
 copy_dll_w32:
@@ -51,10 +51,7 @@ copy_dll_w32:
 	@cp `which unicows.dll` $(BUILD_OUT_DIR)/bin || \
 		(echo "error: unicows.dll missing. did you forget installing \
 		MSLU into MinGW bin directory ?" ; exit 1)
-
-do_copy_dll:
 	@echo "copying dlls to the target directory ..."
-	mkdir -p $(BUILD_OUT_DIR)/bin
 	@for dir in $(SUBLIBS) ; do \
 		for subdir in bin lib; do \
 			if [ -d $$dir/$$subdir ]; then \
@@ -62,6 +59,21 @@ do_copy_dll:
 				if [ "x$$files" != "x" ]; then \
 					cp -p $$files $(BUILD_OUT_DIR)/bin;\
 				fi ;\
+			fi ;\
+		done ;\
+	done
+
+# Linuxの場合、.soは、実体ではなく、
+# シンボリックリンクになってることがあるので、
+# 必要なら、シンボリックを辿る
+# (copy_dll_sub.sh参照)
+copy_dll_so:
+	@echo "copying dlls to the target directory ..."
+	@mkdir -p $(BUILD_OUT_DIR)/bin
+	@for dir in $(SUBLIBS) ; do \
+		for subdir in bin lib; do \
+			if [ -d $$dir/$$subdir ]; then \
+				find $$dir/$$subdir -name '*$(DLL_SUFFIX)' | sh copy_so_sub.sh $(BUILD_OUT_DIR)/bin; \
 			fi ;\
 		done ;\
 	done
