--- a/Makefile_common
+++ b/Makefile_common
@@ -46,6 +46,11 @@ endif
 %.o: %.cpp
 	$(CXX) -c $(DEFAULT_CXXFLAGS) $(CXXFLAGS) $(INCLUDES) $< -o $@
 
+## C++ソース→オブジェクトファイル(常に最適化)
+## よほどの理由がない限り使わないこと
+%.o: %.CPP
+	$(CXX) -c $(DEFAULT_CXXFLAGS) $(CXXFLAGS) $(INCLUDES) -O2 $< -o $@
+
 
 ## コンパイル済みヘッダ
 %.h.gch: %.h
