--- a/src/core/base/cpu/Makefile
+++ b/src/core/base/cpu/Makefile
@@ -11,12 +11,14 @@ include $(CORE_DIR)/Makefile_core_subsys_pre
 #-----------------------------------------
 # このディレクトリにあるソースファイルを列挙
 #-----------------------------------------
-CPPFILES = \
-	Singleton.cpp              \
-	RisaThread.cpp             \
+CPPFILES = dummy.cpp
 
+ifdef USE_SSE
+ CPPFILES += opt_sse/xmmlib.cpp
+endif
 
 #-----------------------------------------
 # ここのセクションは通常変更する必要なし
 #-----------------------------------------
 include $(CORE_DIR)/Makefile_core_subsys_post
+
