--- a/src/core/Makefile_core_common
+++ b/src/core/Makefile_core_common
@@ -10,6 +10,7 @@ SUBSYS_DIRS=\
 	$(CORE_DIR)/base/exception     \
 	$(CORE_DIR)/base/fs            \
 	$(CORE_DIR)/base/log           \
+	$(CORE_DIR)/base/mathlib       \
 	$(CORE_DIR)/base/script        \
 	$(CORE_DIR)/base/system        \
 	$(CORE_DIR)/base/ui            \
