SSE最適化部の細かい修正
make USE_SSE=1 でのとりあえずのコンパイルを可能に (いまのところFFTとインターリーブ解除がSSE化される)

--- a/src/core/Makefile_core_common
+++ b/src/core/Makefile_core_common
@@ -6,6 +6,7 @@ include $(TOP_DIR)/Makefile_filenames
 
 SUBSYS_DIRS=\
 	$(CORE_DIR)/base/config        \
+	$(CORE_DIR)/base/cpu           \
 	$(CORE_DIR)/base/event         \
 	$(CORE_DIR)/base/exception     \
 	$(CORE_DIR)/base/fs            \
