CPPに対するMakefileのルールを削除 非デバッグモードでのビルドで最適化を有効にするように

--- a/Makefile_config
+++ b/Makefile_config
@@ -79,7 +79,7 @@ $(MAKEFILE_BUILD_CONFIGS) : $(TOP_DIR)/Makefile_config $(WXWIDGETS_CONFIG)
 				$(WXWIDGETS_CONFIG) $(WXWIDGETS_CONFIG_ARG) $$conf --libs | \
 					sed -e "s|-Wl,--subsystem,windows||g" -e "s|-mwindows||g" ;\
 		};\
-		comflags="-Wall ";           conf=--debug=no;  get >> $(MAKEFILE_BUILD_CONFIG_RELEASE) ;\
+		comflags="-Wall -O2 ";       conf=--debug=no;  get >> $(MAKEFILE_BUILD_CONFIG_RELEASE) ;\
 		comflags="-Wall -g -DDEBUG"; conf=--debug=yes; get >> $(MAKEFILE_BUILD_CONFIG_DEBUG)   ;\
 		touch $(TOP_DIR)/config_success ;\
 	)
