PCM形式の変換のうち、floatとの変換部をSSEが使用できる場合はそれ用に最適化するように
bcc用のアセンブリ出力も変更

--- a/src/core/sound/Makefile
+++ b/src/core/sound/Makefile
@@ -33,9 +33,11 @@ CPPFILES=\
 
 ifdef USE_SSE
  CPPFILES += \
+		opt_sse/WaveFormatConverter_SSE.cpp \
 		filter/phasevocoder/opt_sse/PhaseVocoderDSP_SSE.cpp
 else
  CPPFILES += \
+		opt_default/WaveFormatConverter_Default.cpp \
 		filter/phasevocoder/opt_default/PhaseVocoderDSP_Default.cpp
 endif
 
