--- a/src/tools/bcc_vocoder/default/Makefile
+++ b/src/tools/bcc_vocoder/default/Makefile
@@ -10,6 +10,7 @@ include $(CORE_DIR)/Makefile_core_common
 
 all_cpp:
 	cat \
+		$(CORE_DIR)/sound/opt_default/WaveFormatConverter_Default.cpp \
 		$(CORE_DIR)/sound/filter/phasevocoder/opt_default/PhaseVocoderDSP_Default.cpp \
 		$(CORE_DIR)/base/mathlib/opt_default/RealFFT_Default.cpp \
 		$(CORE_DIR)/base/mathlib/opt_default/MathAlgorithms_Default.cpp \
