bcc 向け Phase Vocoder の最適化を強化(そこそこよいコード？)

--- a/src/tools/bcc_vocoder/sse/Makefile
+++ b/src/tools/bcc_vocoder/sse/Makefile
@@ -29,7 +29,7 @@ BIN=$(BUILD_OUT_DIR)/bin/$(PROGRAM_ID)$(BIN_SUFFIX)
 LDFLAGS = -g $(CUI_LDFLAGS)
 
 # CXXFLAGS
-CXXFLAGS += -mfpmath=sse,387 -ffast-math
+CXXFLAGS += -mfpmath=sse,387 -ffast-math -O3 -fprefetch-loop-arrays -mtune=pentium3
 
 #----------------------------#
 
