tRisseObjectInterface::Operate() 用のフラグを表すクラスとして tRisseOperateFlags クラスを追加
ocDGetF/ocDSetF VM 命令を新設し、特別なフラグ付きのアクセスを可能に

--- a/src/core/risse/Makefile
+++ b/src/core/risse/Makefile
@@ -53,10 +53,12 @@ CPPFILES =  \
 			src/risseException.cpp                   \
 			src/risseExceptionClass.cpp              \
 			src/risseLexerUtils.cpp                  \
+			src/risseMemberAttribute.cpp             \
 			src/risseMethod.cpp                      \
 			src/risseObject.cpp                      \
 			src/risseOctet.cpp                       \
 			src/risseOpCodes.cpp                     \
+			src/risseOperateFlags.cpp                \
 			src/risseOperateRetValue.cpp             \
 			src/risseScriptBlockBase.cpp             \
 			src/risseString.cpp                      \
