tRisseScriptEngine クラスを作成、スクリプトエンジンインスタンスとして。

--- a/src/core/risse/Makefile
+++ b/src/core/risse/Makefile
@@ -65,6 +65,7 @@ CPPFILES =  \
 			src/risseOperateFlags.cpp                \
 			src/risseOperateRetValue.cpp             \
 			src/risseScriptBlockBase.cpp             \
+			src/risseScriptEngine.cpp                \
 			src/risseStaticStrings.cpp               \
 			src/risseString.cpp                      \
 			src/risseTypes.cpp                       \
