ネイティブ実装のプロパティ用の基底クラスを実装

--- a/src/core/risse/Makefile
+++ b/src/core/risse/Makefile
@@ -57,6 +57,7 @@ CPPFILES =  \
 			src/risseMemberAttribute.cpp             \
 			src/risseMethod.cpp                      \
 			src/risseNativeFunction.cpp              \
+			src/risseNativeProperty.cpp              \
 			src/risseObject.cpp                      \
 			src/risseObjectBase.cpp                  \
 			src/risseObjectClass.cpp                 \
