Array クラスを実装するために継承の仕組みなどを実装中だが途中でコミット
現状ではテストケースは全部は通らない

--- a/src/core/risse/Makefile
+++ b/src/core/risse/Makefile
@@ -44,6 +44,7 @@ CPPFLAGS = $(CXXFLAGS)
 #----------------------------#
 
 CPPFILES =  \
+			src/risseArrayClass.cpp                  \
 			src/risseAssert.cpp                      \
 			src/risseCharUtils.cpp                   \
 			src/risseClass.cpp                       \
