String.new と String.length を実験的に実装

--- a/src/core/risse/Makefile
+++ b/src/core/risse/Makefile
@@ -66,10 +66,12 @@ CPPFILES =  \
 			src/risseOpCodes.cpp                     \
 			src/risseOperateFlags.cpp                \
 			src/risseOperateRetValue.cpp             \
+			src/rissePrimitiveClass.cpp              \
 			src/risseScriptBlockBase.cpp             \
 			src/risseScriptEngine.cpp                \
 			src/risseStaticStrings.cpp               \
 			src/risseString.cpp                      \
+			src/risseStringClass.cpp                 \
 			src/risseTypes.cpp                       \
 			src/risseUtils.cpp                       \
 			src/risseVariant.cpp                     \
